# Isosurface

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
assets/shaders/: Standard.frag  Standard.vert
include/: Transform.h
include/DualContouring/: CachedSDF.h  Coordinate.h  Edge.h  IndexMap.h  MeshGenerator.h
include/Graphics/: Camera.h  Light.h  Material.h  Texture.h
include/Graphics/Meshes/: MeshCpu.h  MeshGpu.h
include/Graphics/Programs/: Program.h  Shader.h  StandardProgram.h
include/Utility/: InputHandler.h  Logger.h  WindowHandler.h
src/: Transform.cpp  main.cpp
src/DualContouring/: CachedSDF.cpp  Coordinate.cpp  Edge.cpp  IndexMap.h  MeshGenerator.cpp
src/Graphics/: Camera.cpp  Camera.h  Texture.cpp  Texture.h
src/Graphics/Meshes/: MeshCpu.cpp  MeshCpu.h  MeshGpu.cpp
src/Graphics/Programs/: Program.cpp  Shader.cpp  StandardProgram.cpp  StandardProgram.h
src/Isosurface/: CachedSDF.cpp  CachedSDF.h  Common.h  IndexMap.h  SDF.cpp  SDF.h
src/Isosurface/DualContouring/: Edge.h  IndexMap.h  MeshGenerator.cpp  MeshGenerator.h
src/Isosurface/MarchingCubes/: Lookup.h  MeshGenerator.cpp  MeshGenerator.h
src/Scene/: Benchmark.cpp  Benchmark.h  Demo.cpp  Demo.h
src/Utility/: InputHandler.cpp  Logger.cpp  Logger.h  Transform.cpp  Transform.h  WindowHandler.cpp  WindowHandler.h
